alignment issue in storydashboard -- Praveen
git-svn-id: https://subversion.assembla.com/svn/projectx-0/branches@717 b02b8b71-e8a6-4a5c-b3be-45d727391186

--- a/ProjectX/src/css/projectx.css
+++ b/ProjectX/src/css/projectx.css
@@ -297,7 +297,7 @@ footer{font-size:10px}
 .paddingL10{ padding-left:10px;}
 .arrowClass{position: absolute;top:0;bottom:0}
 .arrowClass a{display: inline-block;
-/*    font-family: FontAwesome;*/
+    font-family: FontAwesome;
     font-feature-settings: normal;
     font-kerning: auto;
     font-language-override: normal;
@@ -313,9 +313,9 @@ footer{font-size:10px}
 .arrowClass a:focus {
      outline-offset: 0px;
 }
-.arrowClass .fa-chevron-down1 {border-left:1px solid #e8e8e8; font-size: 20px;line-height: 0;   position: absolute;top: 0;width: 39px;bottom:0;color:#ccc}
-.arrowClass .fa-chevron-up1 {border-left:1px solid #e8e8e8; font-size: 20px;line-height: 0;   position: absolute;top: 0;width: 39px;background:#f4f4f4;bottom:-2px;color:#ccc}
-.arrowClass  .fa-chevron-up1::before {
+.arrowClass .fa-chevron-down {border-left:1px solid #e8e8e8; font-size: 20px;line-height: 0;   position: absolute;text-align: center;top: 0;width: 39px;bottom:0;color:#ccc}
+.arrowClass .fa-chevron-up {border-left:1px solid #e8e8e8; font-size: 20px;line-height: 0;   position: absolute;text-align: center;top: 0;width: 39px;background:#f4f4f4;bottom:-2px;color:#ccc}
+.arrowClass  .fa-chevron-up::before {
   
     left: 50%;
     margin-top:-2px;
@@ -323,7 +323,7 @@ footer{font-size:10px}
     position: absolute;
     top: 50%;
 }
-.arrowClass  .fa-chevron-down1::before{left: 50%;
+.arrowClass  .fa-chevron-down::before{left: 50%;
    margin-top:-2px;
     margin-left:-10px;
     position: absolute;
@@ -331,7 +331,7 @@ footer{font-size:10px}
 .story_tasks .customdatatable.ngx-datatable.material{}
 .story_tasks .ngx-datatable.fixed-row .datatable-scroll .datatable-body-row, .story_tasks .ngx-datatable .datatable-scroll .datatable-body-row{margin:0 0 0;background:#f4f4f4;border-bottom:1px solid #fff;border-top:0}
 .story_tasks .datatable-scroll .datatable-row-wrapper:last-child .datatable-body-row{margin:0 0 0;background:#f4f4f4;border-bottom:1px solid #e8e8e8}
-.badge{background: #ff2200; padding: 2px 5px!important; border-radius: 2px!important; position: absolute; left:47%; top: 5px; font-size: 10px;}
+.taskRstory .badge{background: #ACACAC; padding: 2px 5px!important; border-radius: 100px!important;  top: 0px; font-size: 10px;}
 .paddingL10{ padding-left:10px;}
 /* custom auto suggestions styles */
 .relate_story{position: relative;padding:10px;background: #f8f8f8;margin-bottom: 10px;}
@@ -683,8 +683,3 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6cbed6', end
 {
 padding-left:0px!important;    
 }
-.taskRstory{
-  padding-left:1.2rem;  
-}
-
-.imgrel{ position: relative; width:18px; height:18px;margin:10px 0px 0px 3px;}
